addInfo-scrollbar-fix

--- a/src/app/test-second/test-second.component.scss
+++ b/src/app/test-second/test-second.component.scss
@@ -396,7 +396,7 @@
                 // Additional Information
                 // ----------------------
                 .add-info-container {
-                    overflow-y: scroll;
+                    overflow-y: auto;
 
                     .add-info-header {
                         background-color: white;
